<resources>
    <string name="app_name">CarryMusic</string>

    <string name="no_music_selected">No Music is Selected</string>

    <!-- Menu -->
    <string name="download">Download</string>
    <string name="progress">Progress</string>
    <string name="sort">Sort</string>
    <string name="done">Done</string>
    <string name="delete_data">Delete this item</string>
    <string name="delete_cache">Delete audio cache from device</string>
    <string name="search_query_hint">Enter video id to download…</string>
    <string name="title_sort_item">Sorting play list</string>
    <string name="title_sort_cancel">Cancel</string>
    <string name="endpoint_setting">Endpoint</string>
    <string name="endpoint_query_hint">Enter endpoint of server</string>
    <string name="endpoint_update_msg">Endpoint is updated</string>

    <!-- SnackBar -->
    <string name="retry">Retry</string>
    <string name="msg_start_download_cache">Downloading audio file…</string>
    <string name="msg_failed_to_download_cache">Failed to download music</string>
    <string name="undo">Undo</string>
    <string name="msg_delete_data">Deleted</string>
    <string name="msg_delete_cache">Audio cache is deleted from your device</string>

    <!-- Content Description -->
    <string name="thumbnail">thumbnail</string>
    <string name="file_size">file size</string>
    <string name="duration">duration</string>
    <string name="action_more">more</string>
    <string name="cache_warning">no cache</string>
    <string name="previous">previous</string>
    <string name="play_or_pause">play or pause</string>
    <string name="next">next</string>
</resources>
