<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_sort_cancel"
        android:title="@string/title_sort_cancel"
        android:icon="@drawable/ic_clear"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_sort_done"
        android:title="@string/title_sort_item"
        android:icon="@drawable/ic_done"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_shuffle"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_search"
        android:title="@string/download"
        android:icon="@drawable/ic_download"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_progress"
        android:title="@string/progress"
        android:visible="false"
        app:showAsAction="always"/>
    <item android:id="@+id/action_endpoint"
        android:title="@string/endpoint_setting"
        android:icon="@drawable/ic_rss_feed_black_48dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>